src/test/deca/syntax/invalid/created/main-return-vide.deca
//

// Test d'un return vide dans le main

{
    return ;
}